modified(cmake): добавил фалй iload.h в CmakeLists
modified #7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(PROJECT_HEADERS
     include/file/parsingfileinfo.h
     include/file/filemetadatacreate.h
 
-    include/load/abstractload.h
+    include/load/iload.h
     include/load/dataloadmanager.h
     include/load/load.h
 
